--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/mainStyles.css" />
-
-</head>
+    <script src="assets/js/scripts.js"></script>
+  
+    </head>
 <body>
 
     <!-- NEW NAV -->
