final commit before submitting

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="nav-container">
             <header id="nav-header">
                 <h1>
-                    <a href="#" id="nav-logo">Dan Byler</a>
+                    <a id="nav-logo">Dan Byler</a>
                 </h1>
                 <div id="nav-menu-button">MENU</div>
             </header>
